@@ -67,7 +67,6 @@
 "1px"
 "2"
 "419"
-"420+"
 "422"
 "7"
 "9"
